--- a/00-开发工具.md
+++ b/00-开发工具.md
@@ -209,6 +209,11 @@ IDEA 中，编写的 .java 文件，会自动保存和编译 。
 1. 点击项目工作目录上方三个竖点（options），
 2. 选择“Open File With Single Click”和“Open Directories With Single Click”
 
+#### 8.设置项目 JDK
+
+1. 点击左上角“File”，再点击“Project Structures”；
+2. 点击右侧“SDKs"，点击上方”+“号，再点击”Add JDK“。
+
 ### 6.IDEA 类、模块、项目操作
 
 #### 1.IDEA class（类）的操作
