--- a/07-2-综合练习.md
+++ b/07-2-综合练习.md
@@ -1,6 +1,8 @@
-# 综合练习
+# 综合练习、二维数组
 
-## 一、飞机票
+## 一、综合练习
+
+### 1.飞机票
 
 机票价格按照淡季旺季、头等舱和经济舱收费、输入机票原价、月份和头等舱或经济舱。按照如下规则计算机票价格：旺季（5-10月）头等舱9折，经济舱8.5折，淡季（11月到来年4月）头等舱7折，经济舱6.5折。
 
@@ -63,7 +65,7 @@ public class Test01 {
 }
 ```
 
-## 二、找质数
+### 2.找质数
 
 需求：判断 101-200 之间有多少个质数（素数），并输出所有质数（素数）。
 
@@ -97,7 +99,7 @@ public class Test02 {
 }
 ```
 
-## 三、验证码
+### 3.验证码
 
 需求：定义方法实现随机产生一个 5 位的验证码；
 
@@ -148,7 +150,7 @@ public class Test03 {
 }
 ```
 
-## 四、数组元素的赋值
+### 4.数组元素的赋值
 
 需求：把一个数组中的元素复制到另一个新数组中去。
 
@@ -175,7 +177,7 @@ public class Test04 {
 }
 ```
 
-## 五、评委打分
+### 5.评委打分
 
 需求 :  在唱歌比赛中，有 6 名评委给选手打分，分数范围是 [0 - 100] 之间的整数。选手的最后得分为：去掉最高分、最低分后的 4 个评委的平均分，请完成上述过程并计算出选手的得分。
 
@@ -254,7 +256,7 @@ public class Test05 {
 }
 ```
 
-## 六、数字加密
+### 6.数字加密
 
 需求：某系统的数字密码（大于0），比如 1983，采用加密方式进行传输。
 
@@ -322,7 +324,7 @@ public class Test06 {
 }
 ```
 
-## 七、数字解密
+### 7.数字解密
 
 需求：把上一题加密之后的数据进行解密。
 
@@ -363,7 +365,7 @@ public class Test07 {
 }
 ```
 
-## 八、抢红包
+### 8.抢红包
 
 需求：一个大V直播抽奖，奖品是现金红包，分别有{2, 588 , 888, 1000, 10000}五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。打印效果如下：（随机顺序，不一定是下面的顺序）
 
@@ -435,7 +437,7 @@ public class Test08Demo02 {
 }
 ```
 
-## 九、双色球
+### 9.双色球
 
 双色球的规则如图所示：
 
@@ -601,6 +603,130 @@ public class Test09 {
         }
 
         return counts;
+    }
+}
+```
+
+## 二、二维数组
+
+### 1.Java 二维数组的定义
+
+二维数组的定义格式，有两种：
+
+- 第一种：`数据类型[][] 数组名`（习惯用这种）。
+- 第二种：`数据类型 数组名[][]`。
+
+### 2.Java 二维数组的静态初始化
+
+二维数组的静态初始化，
+
+- 完整格式为：`数据类型[][] 数组名 = new 数据类型[][]{{元素1, 元素2, ...}, {元素1, 元素二}}`；比如：
+
+  ```java
+  int[][] arr = new int[][]{{11, 22}, {33, 44}};
+  ```
+
+- 简写格式为：`数据类型[][] 数组名 = {{元素1, 元素2, ...}, {元素1, 元素二}}`；比如：
+
+  ```java
+  int[][] arr = {{11, 22}, {33, 44}};
+  ```
+
+### 3.Java 二维数组的动态初始化
+
+二维数组的动态初始化，格式为：`数据类型[][] 数组名 = new 数据类型[m][n]`
+
+- `m` 表示这个二维数组，可以放多少个一维数组。
+- `n` 表示每一个一维数组的长度。
+
+动态初始化一个二维数组，二维数组的长度为 2，一维数组的长度为 3：
+
+```java
+int[][] arr = new int[2][3];
+```
+
+动态初始化一个二维数组，二维数组的长度为 2，一维数组的长度为 3：
+
+```java
+int[][] arr = new int[2][];
+```
+
+- 此时二维数组中的元素，默认为 `null`。
+
+### 4.Java 二维数组的内存图
+
+下方代码，动态初始化了一个二维数组，
+
+```java
+int[][] arr = new int[2][3];
+```
+
+它在内存中的表现如下图所示：
+
+![二维数组内存图](NodeAssets/二维数组内存图.jpg)
+
+下方代码，动态初始化了一个二维数组，并将二维数组中引用的一维数组地址值覆盖：
+
+```java
+int[][] arr = new int[2][3];
+
+int[] arr1 = {11, 222};
+int[] arr2 = {33, 44, 55};
+
+arr[0] = arr1;
+arr[1] = arr2;
+```
+
+它在内存中的表现如下图所示：
+
+![二维数组内存图2](NodeAssets/二维数组内存图2.jpg)
+
+## 三、二维数组练习
+
+某商场每个季度的营业额如下（单位：万元）：
+
+- 第一季度：22, 66, 44
+- 第二季度：77, 33, 88
+- 第三季度：25, 45, 65
+- 第四季度：11, 66, 99
+
+需求：计算出每个季度的营业额和全年的营业额。
+
+demo-project/base-code/Day07/src/com/kkcf/TwnArray/Demo02.java
+
+```java
+package com.kkcf.TwnArray;
+
+public class Demo02 {
+    public static void main(String[] args) {
+        int[][] arrArr = {
+                {22, 66, 44},
+                {77, 33, 88},
+                {25, 45, 65},
+                {11, 66, 99},
+        };
+
+        int yearSum = 0;
+
+        for (int i = 0; i < arrArr.length; i++) {
+            int[] seaArr = arrArr[i];
+
+            int seaSum = getSeaSum(seaArr);
+            System.out.println("第 " + (i + 1) + " 季度的营业额为 " + seaSum + " 万元");
+
+            yearSum += seaSum;
+        }
+        System.out.println("全年营业额为 " + yearSum + " 万元");
+
+    }
+
+    public static int getSeaSum(int[] arr) {
+        int sum = 0;
+
+        for (int i = 0; i < arr.length; i++)
+            sum += arr[i];
+
+        return sum;
     }
 }
 ```
