--- a/07-2-综合练习、二维数组.md
+++ b/07-2-综合练习、二维数组.md
@@ -4,7 +4,16 @@
 
 ### 1.飞机票
 
-机票价格按照淡季旺季、头等舱和经济舱收费、输入机票原价、月份和头等舱或经济舱。按照如下规则计算机票价格：旺季（5-10月）头等舱9折，经济舱8.5折，淡季（11月到来年4月）头等舱7折，经济舱6.5折。
+机票价格按照淡季旺季、头等舱和经济舱收费、输入
+
+- 机票原价；
+- 月份；
+- 头等舱，或经济舱。
+
+按照如下规则计算机票价格：
+
+- 旺季（5-10 月）头等舱 9 折，经济舱 8.5 折；
+- 淡季（11 月到来年 4 月）头等舱 7 折，经济舱 6.5 折。
 
 demo-project/base-code/Day07/src/com/kkcf/trainning/Test01.java
 
@@ -127,9 +136,8 @@ public class Test03 {
         }
 
         // 打印数组
-        for (int i = 0; i < chars.length; i++) {
+        for (int i = 0; i < chars.length; i++)
             System.out.print(chars[i] + " ");
-        }
         System.out.println();
 
         // 获取验证码
@@ -161,7 +169,7 @@ package com.kkcf.trainning;
 
 public class Test04 {
     public static void main(String[] args) {
-        // 定义一个老数组
+        // 定义一个数组
         int[] arr = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
 
         // 定义一个新数组
@@ -367,7 +375,7 @@ public class Test07 {
 
 ### 8.抢红包
 
-需求：一个大V直播抽奖，奖品是现金红包，分别有{2, 588 , 888, 1000, 10000}五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。打印效果如下：（随机顺序，不一定是下面的顺序）
+需求：一个大V直播抽奖，奖品是现金红包，分别有 {2, 588 , 888, 1000, 10000} 五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。打印效果如下：（随机顺序，不一定是下面的顺序）
 
 demo-project/base-code/Day07/src/com/kkcf/trainning/Test08.java
 
@@ -393,9 +401,9 @@ public class Test08 {
             }
         }
 
-        for (int i = 0; i < randomaward.length; i++) {
+        // 打印数组
+        for (int i = 0; i < randomaward.length; i++)
             System.out.println(randomaward[i] + " ");
-        }
     }
 
     public static boolean isExist(int[] arr, int award) {
@@ -613,7 +621,7 @@ public class Test09 {
 
 二维数组的定义格式，有两种：
 
-- 第一种：`数据类型[][] 数组名`（习惯用这种）。
+- 第一种：`数据类型[][] 数组名`（一般习惯用这种）。
 - 第二种：`数据类型 数组名[][]`。
 
 ### 2.Java 二维数组的静态初始化
@@ -645,7 +653,7 @@ public class Test09 {
 int[][] arr = new int[2][3];
 ```
 
-动态初始化一个二维数组，二维数组的长度为 2，一维数组的长度为 3：
+动态初始化一个二维数组，二维数组的长度为 2，
 
 ```java
 int[][] arr = new int[2][];
@@ -716,8 +724,8 @@ public class Demo02 {
 
             yearSum += seaSum;
         }
+      
         System.out.println("全年营业额为 " + yearSum + " 万元");
-
     }
 
     public static int getSeaSum(int[] arr) {
