--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -4,6 +4,10 @@
 
 采取控制台的方式去书写学生管理系统。
 
+为学生管理系统书写一个登陆、注册、忘记密码的功能。
+
+只有用户登录成功之后，才能进入到学生管理系统中进行增删改查操作。
+
 ## 二、需求分析
 
 ### 1.初始菜单需求
@@ -57,6 +61,42 @@ heima003  王五    25    广州
 heima004  赵六    26    深圳
 ```
 
+### 7.登陆界面需求
+
+```java
+System.out.println("欢迎来到学生管理系统");
+System.out.println("请选择操作1登录 2注册 3忘记密码");
+```
+
+### 8.用户类需求
+
+属性：用户名、密码、身份证号码、手机号码
+
+### 9.注册功能需求
+
+1.用户名需要满足以下要求：
+
+- 用户名唯一；
+- 用户名长度必须在 3~15 位之间；
+- 只能是字母加数字的组合，但是不能是纯数字；
+
+2.密码需要满足以下要求：
+
+- 密码键盘输入两次，两次一致才可以进行注册。
+
+3.身份证号码需要满足以下要求：
+
+- 长度为18位；
+- 不能以 0 为开头；
+- 前 17 位，必须都是数字
+- 最为一位可以是数字，也可以是大写 X 或小写 x；
+
+4.手机号需要满足以下要求：
+
+- 长度为 11 位；
+- 不能以 0 为开头；
+- 必须都是数字
+
 ## 三、代码实现
 
 > 代码开发，先阅读需求文档，并依据需求文档，画出业务流程图。
@@ -66,45 +106,42 @@ heima004  赵六    26    深圳
 demo-project/base-code/Day11-StudentSystem/src/Main.java
 
 ```java
-import java.util.Scanner;
+public static void main(String[] args) {
+    Scanner sc = new Scanner(System.in);
 
-public class Main {
-    public static void main(String[] args) {
-        Scanner sc = new Scanner(System.in);
+    ArrayList<Student> stus = new ArrayList<>();
 
-        // 给 while 循环体标号为 loop，方便 break 关键字推出循环体。
-        loop:
-        while (true) {
-            System.out.println("”-------------欢迎来到北宇治学生管理系统----------------“");
-            System.out.println("”1：添加学生“");
-            System.out.println("”2：删除学生“");
-            System.out.println("”3：修改学生“");
-            System.out.println("”4：查询学生“");
-            System.out.println("”5：退出“");
-            System.out.println("”请输入您的选择:“");
-            String input = sc.next();
+    // 给 while 循环体标号为 loop，方便 break 关键字推出循环体。
+    loop:
+    while (true) {
+        System.out.println("”-------------欢迎来到北宇治学生管理系统----------------“");
+        System.out.println("”1：添加学生“");
+        System.out.println("”2：删除学生“");
+        System.out.println("”3：修改学生“");
+        System.out.println("”4：查询学生“");
+        System.out.println("”5：退出“");
+        System.out.print("”请输入您的选择:“");
+        String input = sc.next();
 
-            switch (input) {
-                case "1" -> System.out.println("”添加学生“");
-                case "2" -> System.out.println("”删除学生“");
-                case "3" -> System.out.println("”修改学生“");
-                case "4" -> System.out.println("”查询学生“");
-                case "5" -> {
-                    System.out.println("”退出“");
-                    System.exit(0);
-                    break loop;
-                }
-                default -> System.out.println("”输入错误“");
+        switch (input) {
+            case "1" -> addStu(stus);
+            case "2" -> removeStu(stus);
+            case "3" -> modifyStu(stus);
+            case "4" -> showStu(stus);
+            case "5" -> {
+                System.out.println("”退出“");
+                // System.exit(0);
+                break loop;
             }
+            default -> System.out.println("”输入错误“");
         }
-
     }
 }
 ```
 
 #### 1.循环体标号
 
-给 while 循环体标号为 `loo`p，方便 `break` 语句作用于循环体。
+给 while 循环体标号为 `loop`，方便 `break` 语句作用于循环体。
 
 ```java
 loop: while (true) {
@@ -199,8 +236,7 @@ demo-project/base-code/Day11-StudentSystem/src/Main.java
 ```java
 /**
  * 此方法用于：添加学生
- *
- * @param stus
+ * @param stus 学生集合列表
  */
 public static void addStu(ArrayList<Student> stus) {
     Scanner sc = new Scanner(System.in);
@@ -210,7 +246,7 @@ public static void addStu(ArrayList<Student> stus) {
     do {
         System.out.print("请输入学生id:");
         id = sc.next();
-        if (findStuId(stus, id) >= 0)
+        if (findStuIndexById(stus, id) >= 0)
             System.out.print("该id已存在，请重新输入！");
         else
             break;
@@ -226,7 +262,7 @@ public static void addStu(ArrayList<Student> stus) {
         System.out.print("请输入学生年龄:");
         ageStr = sc.next();
 
-        if (!checkNum(ageStr) && str2Num(ageStr) < 100)
+        if (checkNum(ageStr) && str2Num(ageStr) < 100)
             System.out.print("输入值不合法，请重新输入！");
         else
             break;
@@ -239,17 +275,17 @@ public static void addStu(ArrayList<Student> stus) {
 
     // 添加学生
     stus.add(new Student(id, name, age, address));
-    System.out.println("”添加学生成功“");
+    System.out.println("添加学生成功");
 }
 
 /**
  * 此函数用于，查找学生id
  *
- * @param stus
- * @param id
- * @return
+ * @param stus 学生集合列表
+ * @param id   学生id
+ * @return -1：未找到；>=0：找到
  */
-public static int findStuId(ArrayList<Student> stus, String id) {
+public static int findStuIndexById(ArrayList<Student> stus, String id) {
     for (int i = 0; i < stus.size(); i++)
         if (stus.get(i).getId().equals(id))
             return i;
@@ -260,25 +296,25 @@ public static int findStuId(ArrayList<Student> stus, String id) {
 /**
  * 此方法用于：判断字符串是否由数字组成
  *
- * @param str
- * @return
+ * @param str 字符串
+ * @return true：是数字；false：不是数字
  */
 public static boolean checkNum(String str) {
     for (int i = 0; i < str.length(); i++) {
         char c = str.charAt(i);
 
         if (c < '0' || c > '9')
-            return false;
+            return true;
     }
 
-    return true;
+    return false;
 }
 
 /**
  * 此函数用于：将字符串转换为数字
  *
- * @param str
- * @return
+ * @param str 字符串
+ * @return -1：转换失败；其他：转换后的数字
  */
 public static int str2Num(String str) {
     int num = 0;
@@ -296,6 +332,84 @@ public static int str2Num(String str) {
 }
 ```
 
+### 4.删除功能实现
+
+demo-project/base-code/Day11-StudentSystem/src/Main.java
+
+```java
+/**
+ * 此方法用于：删除学生
+ * @param stus 学生集合列表
+ */
+public static void removeStu(ArrayList<Student> stus) {
+    Scanner sc = new Scanner(System.in);
+
+    System.out.print("请输入要删除的学生id:");
+    String id = sc.next();
+
+    int index = findStuIndexById(stus, id);
+    if (index >= 0) {
+        Student stu = stus.remove(index);
+        if (stu != null) System.out.println("删除学生成功");
+    } else
+        System.out.println("该学生不存在，回到主菜单");
+}
+```
+
+### 5.修改功能实现
+
+demo-project/base-code/Day11-StudentSystem/src/Main.java
+
+```java
+/**
+ * 此函数用于：修改学生信息
+ *
+ * @param stus 学生集合列表
+ */
+public static void modifyStu(ArrayList<Student> stus) {
+    Scanner sc = new Scanner(System.in);
+
+    // 输入要修改的学生id
+    System.out.print("请输入要修改的学生id:");
+    String id = sc.next();
+
+    int index = findStuIndexById(stus, id);
+    if (index < 0) {
+        System.out.println("该学生不存在，回到主菜单");
+        return;
+    }
+
+    // 输入要修改的学生姓
+    System.out.print("请输入要修改的学生姓名:");
+    String newName = sc.next();
+
+    // 输入要修改的学生年龄
+    String ageStr = "";
+    do {
+        System.out.print("请输入学生年龄:");
+        ageStr = sc.next();
+
+        if (checkNum(ageStr) && str2Num(ageStr) < 100)
+            System.out.print("输入值不合法，请重新输入！");
+        else
+            break;
+    } while (true);
+    int newAge = str2Num(ageStr);
+
+    // 输入要修改的学生家庭住址
+    System.out.print("请输入学生家庭住址:");
+    String newAddress = sc.next();
+
+    // 修改学生信息
+    Student stu = stus.get(index);
+    stu.setName(newName);
+    stu.setAge(newAge);
+    stu.setAddress(newAddress);
+
+    System.out.println("修改学生信息成功");
+}
+```
+
 ### 6.查询功能实现
 
 demo-project/base-code/Day11-StudentSystem/src/Main.java
@@ -304,7 +418,7 @@ demo-project/base-code/Day11-StudentSystem/src/Main.java
 /**
  * 此函数用于，显示学生信息
  *
- * @param stus
+ * @param stus 学生集合列表
  */
 public static void showStu(ArrayList<Student> stus) {
     if (stus.isEmpty()) {
@@ -317,3 +431,4 @@ public static void showStu(ArrayList<Student> stus) {
         System.out.println(stu.getId() + "\t\t" + stu.getName() + "\t\t" + stu.getAge() + "\t\t" + stu.getAddress());
 }
 ```
+
