--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -87,7 +87,7 @@ System.out.println("请选择操作1登录 2注册 3忘记密码");
 3.身份证号码需要满足以下要求：
 
 - 长度为18位；
-- 不能以 0 为开头；
+- 不能以 0 为开头（字符串的 `startWith` 方法）；
 - 前 17 位，必须都是数字
 - 最为一位可以是数字，也可以是大写 X 或小写 x；
 
@@ -97,16 +97,51 @@ System.out.println("请选择操作1登录 2注册 3忘记密码");
 - 不能以 0 为开头；
 - 必须都是数字
 
+### 10.登录功能需求
+
+1.键盘录入用户名；
+
+2.键盘录入密码；
+
+3.键盘录入验证码
+
+验证要求：
+
+- 用户名如果未注册，直接结束方法，并提示：用户名未注册，请先注册。
+- 判断验证码是否正确，如不正确，重新输入；
+- 再判断用户名和密码是否正确，有3次机会
+
+#### 1.验证码规则
+
+- 长度为 5；
+- 由 4 位大写或者小写字母和 1 位数字组成，同一个字母可重复；
+- 数字可以出现在任意位置
+
+比如：aQa1K
+
+### 11.忘记密码功能需求
+
+键盘录入用户名，判断当前用户名是否存在，如不存在，直接结束方法，并提示：未注册
+
+键盘录入身份证号码和手机号码
+
+判断当前用户的身份证号码和手机号码是否一致，
+
+- 如果一致，则提示输入密码，进行修改。
+- 如果不一致，则提示：账号信息不匹配，修改失败。
+
 ## 三、代码实现
 
 > 代码开发，先阅读需求文档，并依据需求文档，画出业务流程图。
 
 ### 1.初始菜单实现
 
-demo-project/base-code/Day11-StudentSystem/src/Main.java
+将 `main` 方法名，改为 `startStudentSystem`，表示启动学生管理系统，用于给其它类调用。同时去掉方法参数 `String[] args`。
+
+demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
-public static void main(String[] args) {
+public static void startStudentSystem() {
     Scanner sc = new Scanner(System.in);
 
     ArrayList<Student> stus = new ArrayList<>();
@@ -139,9 +174,9 @@ public static void main(String[] args) {
 }
 ```
 
-#### 1.循环体标号
+#### 1.循环体标记
 
-给 while 循环体标号为 `loop`，方便 `break` 语句作用于循环体。
+给 while 循环体标记为 `loop`，方便 `break` 语句作用于循环体。
 
 ```java
 loop: while (true) {
@@ -231,7 +266,7 @@ public class Student {
 
 ### 3.添加功能实现
 
-demo-project/base-code/Day11-StudentSystem/src/Main.java
+demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
 /**
@@ -334,7 +369,7 @@ public static int str2Num(String str) {
 
 ### 4.删除功能实现
 
-demo-project/base-code/Day11-StudentSystem/src/Main.java
+demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
 /**
@@ -358,7 +393,7 @@ public static void removeStu(ArrayList<Student> stus) {
 
 ### 5.修改功能实现
 
-demo-project/base-code/Day11-StudentSystem/src/Main.java
+demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
 /**
@@ -412,7 +447,7 @@ public static void modifyStu(ArrayList<Student> stus) {
 
 ### 6.查询功能实现
 
-demo-project/base-code/Day11-StudentSystem/src/Main.java
+demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
 /**
@@ -432,3 +467,385 @@ public static void showStu(ArrayList<Student> stus) {
 }
 ```
 
+### 8.用户类实现
+
+demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/User.java
+
+```java
+package com.kkcf.student;
+
+public class User {
+    private String username;
+    private String password;
+    private String personId;
+    private String phoneNumber;
+
+    public User() {
+    }
+
+    public User(String username, String password, String personId, String phoneNumber) {
+        this.username = username;
+        this.password = password;
+        this.personId = personId;
+        this.phoneNumber = phoneNumber;
+    }
+
+    public String getUsername() {
+        return username;
+    }
+
+    public void setUsername(String username) {
+        this.username = username;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public String getPersonId() {
+        return personId;
+    }
+
+    public void setPersonId(String personId) {
+        this.personId = personId;
+    }
+
+    public String getPhoneNumber() {
+        return phoneNumber;
+    }
+
+    public void setPhoneNumber(String phoneNumber) {
+        this.phoneNumber = phoneNumber;
+    }
+
+    @Override
+    public String toString() {
+        return "User{" +
+                "username='" + username + '\'' +
+                ", password='" + password + '\'' +
+                ", personId='" + personId + '\'' +
+                ", phoneNumber='" + phoneNumber + '\'' +
+                '}';
+    }
+}
+```
+
+### 9.注册功能实现
+
+在校验字符串时，一般先校验格式，再校验是否唯一；（数据库操作都会放在最后，减少性能的消耗）
+
+字符串的 `startWith` 方法的使用
+
+demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/App.java
+
+```java
+private static void register(ArrayList<User> list) {
+    Scanner sc = new Scanner(System.in);
+
+    // 输入用户名
+    String username = "";
+    do {
+        System.out.print("请输入用户名：");
+        username = sc.next();
+
+        int len = username.length();
+        if (len < 3 || len > 15)
+            System.out.println("用户名长度应在 3-15 之间，请重新输入");
+        else if (checkUsername(username))
+            System.out.println("用户只能是字母加数字的组合，请重新输入");
+        else if (isUsernameUnique(list, username))
+            System.out.println("用户名已存在，请重新输入");
+        else
+            break;
+    } while (true);
+
+    // 输入密码
+    String password1 = "";
+    do {
+        System.out.print("请输入密码");
+        password1 = sc.next();
+
+        System.out.print("请再次输入密码");
+        String password2 = sc.next();
+
+        if (password1.equals(password2))
+            break;
+        else
+            System.out.println("两次输入的密码不一致，请重新输入");
+    } while (true);
+
+    // 输入身份证号
+    String personId = "";
+    do {
+        System.out.print("请输入身份证号");
+        personId = sc.next();
+
+        if (personId.length() != 18)
+            System.out.println("身份证号长度应为18位，请重新输入");
+        else if (personId.startsWith("0"))
+            System.out.println("身份证号不能以0开头，请重新输入");
+        else if (checkPersonId(personId))
+            System.out.println("身份证号不合法，请重新输入");
+        else
+            break;
+    } while (true);
+
+    // 输入手机号
+    String phone = "";
+    do {
+        System.out.print("请输入手机号：");
+        phone = sc.next();
+
+        if (phone.length() != 11)
+            System.out.println("手机号长度应为11位，请重新输入");
+        else if (phone.startsWith("0"))
+            System.out.println("手机号不能以0开头，请重新输入");
+        else if (checkPhoneNumber(phone))
+            System.out.println("手机号不合法，请重新输入");
+        else
+            break;
+
+    } while (true);
+
+    // 将用户信息添加到集合中
+    list.add(new User(username, password1, personId, phone));
+    System.out.println("注册成功");
+    System.out.println(list);
+}
+
+/**
+ * 此函数用于：检查用户名是否只能是字母加数字的组合
+ *
+ * @param username 用户名
+ * @return true:不是；false:是
+ */
+public static boolean checkUsername(String username) {
+    int letterCount = 0;
+
+    for (int i = 0; i < username.length(); i++) {
+        char c = username.charAt(i);
+
+        if ((c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z'))
+            letterCount++;
+        else if (c < '0' || c > '9')
+            return true;
+    }
+
+    return letterCount == 0;
+}
+
+/**
+ * 此函数用于： 检查用户名是否唯一
+ *
+ * @param list     用户集合列表
+ * @param username 用户名
+ * @return true:不唯一；false:唯一
+ */
+public static boolean isUsernameUnique(ArrayList<User> list, String username) {
+    for (User user : list)
+        if (user.getUsername().equals(username))
+            return true;
+
+    return false;
+}
+
+/**
+ * 此函数用于：检查身份证号是否合法
+ *
+ * @param personId 身份证号
+ * @return true:不合法；false:合法
+ */
+public static boolean checkPersonId(String personId) {
+    int len = personId.length();
+
+    for (int i = 1; i < len - 1; i++) {
+        char c = personId.charAt(i);
+
+        if (c < '0' || c > '9')
+            return true;
+    }
+
+    char c = personId.charAt(len - 1);
+    return (c < '0' || c > '9') && c != 'X' && c != 'x';
+}
+
+/**
+ * 此函数用于：检查手机号是否合法
+ * @param phone 手机号
+ * @return true:不合法；false:合法
+ */
+private static boolean checkPhoneNumber(String phone) {
+    return StudentSystem.checkNum(phone);
+}
+```
+
+### 10.登录功能实现
+
+使用 ArrayList 来创建验证码。JDK5 以后，`Character` 包装类和 `char` 类型可以相互转换。
+
+> 封装一个方法，如果要接收很多参数，可以将这些参数，作为属性封装在一个类中，再接收这个类创建的对象。
+
+demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/App.java
+
+```java
+/**
+ * 此方法用于：登录
+ * @param list 用户集合列表
+ */
+private static void login(ArrayList<User> list) {
+    Scanner sc = new Scanner(System.in);
+
+    // 输入用户名
+    System.out.print("请输入用户名：");
+    String username = sc.next();
+    User user = findUserByUsername(list, username);
+    if (user == null) {
+        System.out.println("用户名未注册，请先注册");
+        return;
+    }
+
+    // 输入密码，有 3 次机会
+    String password = "";
+    for (int i = 0; true; i++) {
+        System.out.print("请输入密码：");
+        password = sc.next();
+
+        if (user.getPassword().equals(password))
+            break;
+        else {
+            if (i == 2) {
+                System.out.println("密码错误，登录失败");
+                return;
+            }
+            System.out.println("密码错误，请重新输入");
+        }
+    }
+
+    // 输入验证码
+    String codeInput = "";
+    do {
+        String code = generateCode();
+        System.out.println("请输入验证码：" + code);
+        codeInput = sc.next();
+        if (code.equalsIgnoreCase(codeInput))
+            break;
+        else
+            System.out.println("验证码错误，请重新输入");
+    } while (true);
+
+    System.out.println("username：" + username + "，personId：" + password + "，code：" + codeInput);
+    System.out.println("登陆成功！");
+    // 进入学生管理系统
+    StudentSystem.startStudentSystem();
+}
+
+/**
+ * 此函数用于：生成一个随机的 5 位验证码
+ *
+ * @return 验证码
+ */
+public static String generateCode() {
+    // 填充 letters
+    ArrayList<Character> letters = new ArrayList<>();
+    for (int i = 0; i < 26; i++) {
+        letters.add((char) ('a' + i));
+        letters.add((char) ('A' + i));
+    }
+
+    // 填充 nums
+    ArrayList<Character> nums = new ArrayList<>();
+    for (int i = 0; i < 10; i++)
+        nums.add((char) ('0' + i));
+
+    Random r = new Random();
+
+    char[] chs = new char[5];
+
+    // 生成字母
+    for (int i = 0; i < 4; i++)
+        chs[i] = letters.get(r.nextInt(letters.size()));
+
+    // 生成数字
+    chs[4] = nums.get(r.nextInt(nums.size()));
+
+    // 将最后一位，与前面随机一位字符交换
+    int index = r.nextInt(4);
+    char temp = chs[4];
+    chs[4] = chs[index];
+    chs[index] = temp;
+
+    // 返回结果
+    return new String(chs);
+}
+
+/**
+ * 此函数用于：检查用户名是否存在
+ *
+ * @param list     用户集合列表
+ * @param username 用户名
+ * @return true:不存在；false:存在
+ */
+public static User findUserByUsername(ArrayList<User> list, String username) {
+    for (User user : list)
+        if (user.getUsername().equals(username))
+            return user;
+
+    return null;
+}
+```
+
+### 11.忘记密码功能实现
+
+demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/App.java
+
+```java
+/**
+ * 此函数用于：忘记密码
+ *
+ * @param list 用户集合列表
+ */
+private static void forgetPassword(ArrayList<User> list) {
+    Scanner sc = new Scanner(System.in);
+
+    // 输入用户名
+    System.out.print("请输入用户名：");
+    String username = sc.next();
+    User user = findUserByUsername(list, username);
+    if (user == null) {
+        System.out.println("用户未注册");
+        return;
+    }
+
+    // 输入身份证号
+    System.out.print("请输入身份证号：");
+    String personId = sc.next();
+
+    // 输入手机号
+    System.out.print("请输入手机号：");
+    String phone = sc.next();
+
+    // 修改密码
+    if (!(user.getPersonId().equalsIgnoreCase(personId) && user.getPhoneNumber().equals(phone))) {
+        System.out.println("身份证号和手机号信息不匹配，修改失败");
+        return;
+    }
+
+    String newPassword1 = "";
+    do {
+        System.out.print("请输入新密码：");
+        newPassword1 = sc.next();
+
+        System.out.println("请再次输入新密码：");
+        String newPassword2 = sc.next();
+
+        if (newPassword1.equals(newPassword2)) break;
+    } while (true);
+
+    user.setPassword(newPassword1);
+    System.out.println("密码修改成功");
+}
+```
