--- a/07-2-综合练习、二维数组.md
+++ b/07-2-综合练习、二维数组.md
@@ -266,7 +266,7 @@ public class Test05 {
 
 ### 6.数字加密
 
-需求：某系统的数字密码（大于0），比如 1983，采用加密方式进行传输。
+需求：某系统的数字密码（大于 0），比如 1983，采用加密方式进行传输。
 
 规则如下：先得到每位数，然后每位数都加上 5 , 再对 10 求余，最后将所有数字反转，得到一串新数。
 
@@ -375,7 +375,7 @@ public class Test07 {
 
 ### 8.抢红包
 
-需求：一个大V直播抽奖，奖品是现金红包，分别有 {2, 588 , 888, 1000, 10000} 五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。打印效果如下：（随机顺序，不一定是下面的顺序）
+需求：一个大V直播抽奖，奖品是现金红包，分别有 {2, 588 , 888, 1000, 10000} 五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。
 
 demo-project/base-code/Day07/src/com/kkcf/trainning/Test08.java
 
@@ -414,6 +414,8 @@ public class Test08 {
     }
 }
 ```
+
+由上面的代码可知，其实就是将数组中的元素，调换顺序：
 
 优化后：
 
