--- a/07-2-综合练习、二维数组.md
+++ b/07-2-综合练习、二维数组.md
@@ -48,11 +48,11 @@ public class Test01 {
 
             return price;
         } else if (mon >= 5 && mon <= 10) {
-            double[] counts = {0.9, 0.85};
+            double[] counts = {0.9, 0.85}; // 头等舱折扣, 经济舱折扣
 
             price = caculateFlightTicketWithSeat(seat, originalPrice, counts);
         } else {
-            double[] counts = {0.7, 0.65};
+            double[] counts = {0.7, 0.65}; // 头等舱折扣, 经济舱折扣
 
             price = caculateFlightTicketWithSeat(seat, originalPrice, counts);
         }
@@ -268,7 +268,7 @@ public class Test05 {
 
 需求：某系统的数字密码（大于 0），比如 1983，采用加密方式进行传输。
 
-规则如下：先得到每位数，然后每位数都加上 5 , 再对 10 求余，最后将所有数字反转，得到一串新数。
+规则如下：先得到每位数，然后每位数都加上 5 , 再对 10 取余，最后将所有数字反转，得到一串新数。
 
 demo-project/base-code/Day07/src/com/kkcf/trainning/Test06.java
 
