--- a/07-2-综合练习、二维数组.md
+++ b/07-2-综合练习、二维数组.md
@@ -375,7 +375,7 @@ public class Test07 {
 
 ### 8.抢红包
 
-需求：一个大V直播抽奖，奖品是现金红包，分别有 {2, 588 , 888, 1000, 10000} 五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。
+需求：一个大 V 直播抽奖，奖品是现金红包，分别有 {2, 588 , 888, 1000, 10000} 五个奖金。请使用代码模拟抽奖，打印出每个奖项，奖项的出现顺序要随机且不重复。
 
 demo-project/base-code/Day07/src/com/kkcf/trainning/Test08.java
 
@@ -649,13 +649,13 @@ public class Test09 {
 - `m` 表示这个二维数组，可以放多少个一维数组。
 - `n` 表示每一个一维数组的长度。
 
-动态初始化一个二维数组，二维数组的长度为 2，一维数组的长度为 3：
+动态初始化一个二维数组，其中二维数组的长度为 2，一维数组的长度为 3：
 
 ```java
 int[][] arr = new int[2][3];
 ```
 
-动态初始化一个二维数组，二维数组的长度为 2，
+动态初始化一个二维数组，其中二维数组的长度为 2，
 
 ```java
 int[][] arr = new int[2][];
