--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -13,7 +13,7 @@
 ### 1.初始菜单需求
 
 ```java
-"-------------欢迎来到黑马学生管理系统----------------"
+"-------------欢迎来到北宇治学生管理系统----------------"
 "1：添加学生"
 "2：删除学生"
 "3：修改学生"
@@ -739,6 +739,7 @@ private static void login(ArrayList<User> list) {
 
     System.out.println("username：" + username + "，personId：" + password + "，code：" + codeInput);
     System.out.println("登陆成功！");
+
     // 进入学生管理系统
     StudentSystem.startStudentSystem();
 }
