--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -2,17 +2,21 @@
 
 ## 一、需求概述
 
-采取控制台的方式去书写学生管理系统。
+使用控制台作为学生管理系统的 UI 界面。
 
-为学生管理系统书写一个登陆、注册、忘记密码的功能。
+为学生管理系统编写登陆、注册、忘记密码的功能。
 
-只有用户登录成功之后，才能进入到学生管理系统中进行增删改查操作。
+只有用户登录成功之后，才能进入到学生管理系统中，进行增、删、改、查操作。
 
-## 二、需求分析
+## 三、代码实现
 
-### 1.初始菜单需求
+> 代码开发，先阅读需求文档，并依据需求文档，画出业务流程图。
 
-```java
+### 1.初始菜单实现
+
+需求：
+
+```shell
 "-------------欢迎来到北宇治学生管理系统----------------"
 "1：添加学生"
 "2：删除学生"
@@ -22,121 +26,9 @@
 "请输入您的选择:"
 ```
 
-### 2.学生类需求
+将 `main` 方法名，改为 `startStudentSystem`，表示启动学生管理系统，用于给其它类调用。
 
-属性：id、姓名、年龄、家庭住址
-
-### 3.添加功能需求
-
-键盘录入每一个学生信息并添加，需要满足以下要求：
-
-- id 唯一
-
-### 4.删除功能需求
-
-键盘录入要删除的学生 id，需要满足以下要求：
-
-- id 存在删除
-- id 不存在，需要提示不存在，并回到初始菜单
-
-### 5.修改功能需求
-
-键盘录入要修改的学生 id，需要满足以下要求：
-
-- id 存在，继续录入其他信息
-- id 不存在，需要提示不存在，并回到初始菜单
-
-### 6.查询功能需求
-
-打印所有的学生信息，需要满足以下要求：
-
-- 如果没有学生信息，提示：当前无学生信息，请添加后再查询
-- 如果有学生信息，需要按照以下格式输出。（不用过于纠结对齐的问题）
-
-```java
-id    姓名    年龄    家庭住址
-heima001  张三    23    南京
-heima002  李四    24    北京
-heima003  王五    25    广州
-heima004  赵六    26    深圳
-```
-
-### 7.登陆界面需求
-
-```java
-System.out.println("欢迎来到学生管理系统");
-System.out.println("请选择操作1登录 2注册 3忘记密码");
-```
-
-### 8.用户类需求
-
-属性：用户名、密码、身份证号码、手机号码
-
-### 9.注册功能需求
-
-1.用户名需要满足以下要求：
-
-- 用户名唯一；
-- 用户名长度必须在 3~15 位之间；
-- 只能是字母加数字的组合，但是不能是纯数字；
-
-2.密码需要满足以下要求：
-
-- 密码键盘输入两次，两次一致才可以进行注册。
-
-3.身份证号码需要满足以下要求：
-
-- 长度为18位；
-- 不能以 0 为开头（字符串的 `startWith` 方法）；
-- 前 17 位，必须都是数字
-- 最为一位可以是数字，也可以是大写 X 或小写 x；
-
-4.手机号需要满足以下要求：
-
-- 长度为 11 位；
-- 不能以 0 为开头；
-- 必须都是数字
-
-### 10.登录功能需求
-
-1.键盘录入用户名；
-
-2.键盘录入密码；
-
-3.键盘录入验证码
-
-验证要求：
-
-- 用户名如果未注册，直接结束方法，并提示：用户名未注册，请先注册。
-- 判断验证码是否正确，如不正确，重新输入；
-- 再判断用户名和密码是否正确，有3次机会
-
-#### 1.验证码规则
-
-- 长度为 5；
-- 由 4 位大写或者小写字母和 1 位数字组成，同一个字母可重复；
-- 数字可以出现在任意位置
-
-比如：aQa1K
-
-### 11.忘记密码功能需求
-
-键盘录入用户名，判断当前用户名是否存在，如不存在，直接结束方法，并提示：未注册
-
-键盘录入身份证号码和手机号码
-
-判断当前用户的身份证号码和手机号码是否一致，
-
-- 如果一致，则提示输入密码，进行修改。
-- 如果不一致，则提示：账号信息不匹配，修改失败。
-
-## 三、代码实现
-
-> 代码开发，先阅读需求文档，并依据需求文档，画出业务流程图。
-
-### 1.初始菜单实现
-
-将 `main` 方法名，改为 `startStudentSystem`，表示启动学生管理系统，用于给其它类调用。同时去掉方法参数 `String[] args`。
+同时去掉方法参数 `String[] args`。
 
 demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
@@ -146,7 +38,7 @@ public static void startStudentSystem() {
 
     ArrayList<Student> stus = new ArrayList<>();
 
-    // 给 while 循环体标号为 loop，方便 break 关键字推出循环体。
+    // 给 while 循环体，标号为 loop，方便 break 关键字退出循环体。
     loop:
     while (true) {
         System.out.println("”-------------欢迎来到北宇治学生管理系统----------------“");
@@ -176,7 +68,7 @@ public static void startStudentSystem() {
 
 #### 1.循环体标记
 
-给 while 循环体标记为 `loop`，方便 `break` 语句作用于循环体。
+给 while 循环体，标记为 `loop`，方便 `break` 语句作用于循环体，而非 switch 语句。
 
 ```java
 loop: while (true) {
@@ -198,6 +90,8 @@ System.exit(0);
 ```
 
 ### 2.学生类实现
+
+需求：属性：id、姓名、年龄、家庭住址
 
 demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/Student.java
 
@@ -265,6 +159,10 @@ public class Student {
 ```
 
 ### 3.添加功能实现
+
+需求：键盘录入每一个学生信息并添加，需要满足以下要求：
+
+- id 唯一
 
 demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
@@ -369,6 +267,11 @@ public static int str2Num(String str) {
 
 ### 4.删除功能实现
 
+需求：键盘录入要删除的学生 id，需要满足以下要求：
+
+- id 存在删除
+- id 不存在，需要提示不存在，并回到初始菜单
+
 demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
@@ -392,6 +295,11 @@ public static void removeStu(ArrayList<Student> stus) {
 ```
 
 ### 5.修改功能实现
+
+需求：键盘录入要修改的学生 id，需要满足以下要求：
+
+- id 存在，继续录入其他信息
+- id 不存在，需要提示不存在，并回到初始菜单
 
 demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
@@ -447,6 +355,19 @@ public static void modifyStu(ArrayList<Student> stus) {
 
 ### 6.查询功能实现
 
+需求：打印所有的学生信息，需要满足以下要求：
+
+- 如果没有学生信息，提示：当前无学生信息，请添加后再查询
+- 如果有学生信息，需要按照以下格式输出。（不用过于纠结对齐的问题）
+
+```java
+id    姓名    年龄    家庭住址
+heima001  张三    23    南京
+heima002  李四    24    北京
+heima003  王五    25    广州
+heima004  赵六    26    深圳
+```
+
 demo-project/base-code/Day11-StudentSystem/src/kkcf/student/StudentSystem.java
 
 ```java
@@ -467,7 +388,16 @@ public static void showStu(ArrayList<Student> stus) {
 }
 ```
 
+### 7.登陆界面需求
+
+```java
+System.out.println("欢迎来到北宇治学生管理系统");
+System.out.println("请选择操作1登录 2注册 3忘记密码");
+```
+
 ### 8.用户类实现
+
+属性：用户名、密码、身份证号码、手机号码
 
 demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/User.java
 
@@ -534,7 +464,30 @@ public class User {
 }
 ```
 
-### 9.注册功能实现
+### 9.用户注册功能实现
+
+需求：1.用户名需要满足以下要求：
+
+- 用户名唯一；
+- 用户名长度必须在 3~15 位之间；
+- 只能是字母加数字的组合，但是不能是纯数字；
+
+2.密码需要满足以下要求：
+
+- 密码键盘输入两次，两次一致才可以进行注册。
+
+3.身份证号码需要满足以下要求：
+
+- 长度为18位；
+- 不能以 0 为开头（字符串的 `startWith` 方法）；
+- 前 17 位，必须都是数字
+- 最为一位可以是数字，也可以是大写 X 或小写 x；
+
+4.手机号需要满足以下要求：
+
+- 长度为 11 位；
+- 不能以 0 为开头；
+- 必须都是数字
 
 在校验字符串时，一般先校验格式，再校验是否唯一；（数据库操作都会放在最后，减少性能的消耗）
 
@@ -685,6 +638,22 @@ private static boolean checkPhoneNumber(String phone) {
 
 ### 10.登录功能实现
 
+需求：1.键盘录入用户名；2.键盘录入密码；3.键盘录入验证码
+
+验证要求：
+
+- 用户名如果未注册，直接结束方法，并提示：用户名未注册，请先注册。
+- 判断验证码是否正确，如不正确，重新输入；
+- 再判断用户名和密码是否正确，有3次机会
+
+#### 1.验证码规则
+
+- 长度为 5；
+- 由 4 位大写或者小写字母和 1 位数字组成，同一个字母可重复；
+- 数字可以出现在任意位置
+
+比如：aQa1K
+
 使用 ArrayList 来创建验证码。JDK5 以后，`Character` 包装类和 `char` 类型可以相互转换。
 
 > 封装一个方法，如果要接收很多参数，可以将这些参数，作为属性封装在一个类中，再接收这个类创建的对象。
@@ -731,7 +700,7 @@ private static void login(ArrayList<User> list) {
         String code = generateCode();
         System.out.println("请输入验证码：" + code);
         codeInput = sc.next();
-        if (code.equalsIgnoreCase(codeInput))
+        if (code.equalsIgnoreCase(codeInput)) // 忽略大小写进行比较
             break;
         else
             System.out.println("验证码错误，请重新输入");
@@ -800,6 +769,15 @@ public static User findUserByUsername(ArrayList<User> list, String username) {
 ```
 
 ### 11.忘记密码功能实现
+
+需求：键盘录入用户名，判断当前用户名是否存在，如不存在，直接结束方法，并提示：未注册
+
+键盘录入身份证号码和手机号码
+
+判断当前用户的身份证号码和手机号码是否一致，
+
+- 如果一致，则提示输入密码，进行修改。
+- 如果不一致，则提示：账号信息不匹配，修改失败。
 
 demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/App.java
 
