--- a/07-2-综合练习、二维数组.md
+++ b/07-2-综合练习、二维数组.md
@@ -112,7 +112,7 @@ public class Test02 {
 
 需求：定义方法实现随机产生一个 5 位的验证码；
 
-验证码格式：长度为 5；前四位是大写字母或者小写字母；最后一位是数字；
+验证码格式：长度为 5；前四位是大写或者小写字母；最后一位是数字；
 
 - 思路：将字母、数字分别放入数组中，再随机取数组的索引。
 
@@ -289,7 +289,7 @@ public class Test06 {
             count++;
         }
 
-        // 初始化数组
+        // 初始化数组，存储每位数字
         int[] nums = new int[count];
 
         int temp2 = num;
@@ -297,11 +297,6 @@ public class Test06 {
             nums[nums.length - 1 - i] = temp2 % 10;
             temp2 /= 10;
         }
-
-        // 打印 nums 数组
-        for (int i = 0; i < nums.length; i++)
-            System.out.print(nums[i] + " ");
-        System.out.println();
 
         // 2.加密：每位数 +5
         for (int i = 0; i < nums.length; i++)
@@ -317,11 +312,6 @@ public class Test06 {
             nums[i] = nums[j];
             nums[j] = temp;
         }
-
-        // 打印 nums 数组
-        for (int i = 0; i < nums.length; i++)
-            System.out.print(nums[i] + " ");
-        System.out.println();
 
         // 5.将数组中的数字，组成一个整数
         int result = 0;
