--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -4,7 +4,7 @@
 
 使用控制台作为学生管理系统的 UI 界面。
 
-为学生管理系统编写登陆、注册、忘记密码的功能。
+为学生管理系统编写登录、注册、忘记密码的功能。
 
 只有用户登录成功之后，才能进入到学生管理系统中，进行增、删、改、查操作。
 
@@ -388,7 +388,7 @@ public static void showStu(ArrayList<Student> stus) {
 }
 ```
 
-### 7.登陆界面需求
+### 7.登录界面需求
 
 ```java
 System.out.println("欢迎来到北宇治学生管理系统");
@@ -472,18 +472,18 @@ public class User {
 - 用户名长度必须在 3~15 位之间；
 - 只能是字母加数字的组合，但是不能是纯数字；
 
-2.密码需要满足以下要求：
+  2.密码需要满足以下要求：
 
 - 密码键盘输入两次，两次一致才可以进行注册。
 
-3.身份证号码需要满足以下要求：
+  3.身份证号码需要满足以下要求：
 
-- 长度为18位；
+- 长度为 18 位；
 - 不能以 0 为开头（字符串的 `startWith` 方法）；
 - 前 17 位，必须都是数字
 - 最为一位可以是数字，也可以是大写 X 或小写 x；
 
-4.手机号需要满足以下要求：
+  4.手机号需要满足以下要求：
 
 - 长度为 11 位；
 - 不能以 0 为开头；
@@ -644,7 +644,7 @@ private static boolean checkPhoneNumber(String phone) {
 
 - 用户名如果未注册，直接结束方法，并提示：用户名未注册，请先注册。
 - 判断验证码是否正确，如不正确，重新输入；
-- 再判断用户名和密码是否正确，有3次机会
+- 再判断用户名和密码是否正确，有 3 次机会
 
 #### 1.验证码规则
 
@@ -707,7 +707,7 @@ private static void login(ArrayList<User> list) {
     } while (true);
 
     System.out.println("username：" + username + "，personId：" + password + "，code：" + codeInput);
-    System.out.println("登陆成功！");
+    System.out.println("登录成功！");
 
     // 进入学生管理系统
     StudentSystem.startStudentSystem();
