--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -322,7 +322,7 @@ public static void modifyStu(ArrayList<Student> stus) {
         return;
     }
 
-    // 输入要修改的学生姓
+    // 输入要修改的学生姓名
     System.out.print("请输入要修改的学生姓名:");
     String newName = sc.next();
 
@@ -466,30 +466,36 @@ public class User {
 
 ### 9.用户注册功能实现
 
-需求：1.用户名需要满足以下要求：
+1.用户名需要满足以下要求：
 
 - 用户名唯一；
 - 用户名长度必须在 3~15 位之间；
 - 只能是字母加数字的组合，但是不能是纯数字；
 
-  2.密码需要满足以下要求：
+
+2.密码需要满足以下要求：
 
 - 密码键盘输入两次，两次一致才可以进行注册。
 
-  3.身份证号码需要满足以下要求：
+
+3.身份证号码需要满足以下要求：
 
 - 长度为 18 位；
-- 不能以 0 为开头（字符串的 `startWith` 方法）；
+- 不能以 0 开头（字符串的 `startWith` 方法）；
 - 前 17 位，必须都是数字
-- 最为一位可以是数字，也可以是大写 X 或小写 x；
+- 最后一位可以是数字，也可以是大写 X 或小写 x；
 
-  4.手机号需要满足以下要求：
+
+4.手机号需要满足以下要求：
 
 - 长度为 11 位；
 - 不能以 0 为开头；
 - 必须都是数字
 
-在校验字符串时，一般先校验格式，再校验是否唯一；（数据库操作都会放在最后，减少性能的消耗）
+在校验字符串时：
+
+1. 一般先校验格式，再校验是否唯一；
+2. 数据库操作都会放在最后，减少性能的消耗。
 
 字符串的 `startWith` 方法的使用
 
@@ -772,9 +778,7 @@ public static User findUserByUsername(ArrayList<User> list, String username) {
 
 需求：键盘录入用户名，判断当前用户名是否存在，如不存在，直接结束方法，并提示：未注册
 
-键盘录入身份证号码和手机号码
-
-判断当前用户的身份证号码和手机号码是否一致，
+键盘录入身份证号码和手机号码。判断当前用户的身份证号码和手机号码是否一致，
 
 - 如果一致，则提示输入密码，进行修改。
 - 如果不一致，则提示：账号信息不匹配，修改失败。
