--- a/11-2-学生管理系统.md
+++ b/11-2-学生管理系统.md
@@ -91,7 +91,7 @@ System.exit(0);
 
 ### 2.学生类实现
 
-需求：属性：id、姓名、年龄、家庭住址
+需求：属性：id、姓名、年龄、家庭住址。
 
 demo-project/base-code/Day11-StudentSystem/src/com/kkcf/student/Student.java
 
@@ -472,11 +472,9 @@ public class User {
 - 用户名长度必须在 3~15 位之间；
 - 只能是字母加数字的组合，但是不能是纯数字；
 
-
 2.密码需要满足以下要求：
 
 - 密码键盘输入两次，两次一致才可以进行注册。
-
 
 3.身份证号码需要满足以下要求：
 
@@ -484,7 +482,6 @@ public class User {
 - 不能以 0 开头（字符串的 `startWith` 方法）；
 - 前 17 位，必须都是数字
 - 最后一位可以是数字，也可以是大写 X 或小写 x；
-
 
 4.手机号需要满足以下要求：
 
