--- a/07-2-综合练习、二维数组.md
+++ b/07-2-综合练习、二维数组.md
@@ -150,7 +150,7 @@ public class Test03 {
             code += chars[index];
         }
 
-        int randomNum = r.nextInt(10);
+        int randomNum = r.nextInt(10); // 0-9 之间的随机数
         code += randomNum;
 
         System.out.println(code);
@@ -187,7 +187,9 @@ public class Test04 {
 
 ### 5.评委打分
 
-需求 :  在唱歌比赛中，有 6 名评委给选手打分，分数范围是 [0 - 100] 之间的整数。选手的最后得分为：去掉最高分、最低分后的 4 个评委的平均分，请完成上述过程并计算出选手的得分。
+需求 :  在唱歌比赛中，有 6 名评委给选手打分，分数范围是 [0 - 100] 之间的整数；
+
+选手的最后得分为：去掉最高分、最低分后的 4 个评委的平均分，请完成上述过程并计算出选手的得分。
 
 demo-project/base-code/Day07/src/com/kkcf/trainning/Test05.java
 
